# rust-webserver

./: Cargo.toml  LICENSE  README.md
assets/: blogtest.md  index.html
assets/css/: base.css  blog.css  page.css  page_list.css  theme.css  topnav.css
assets/markdown/: home.md
assets/posts/: blogtest.md  blogtest.toml  hello_world.md  hello_world.toml
assets/templates/: 404.html  base.html  blog.html  page.html  page_list.html  plain_markdown_page.html  posts_list.html
pages/: index.md  portfolio.md  robots.txt  sitemap.xml  things.md
pages/posts/: cubyz_shover.md  cubyz_shover.toml  hello_world.md  hello_world.toml  how-to-code-roblox.md  how-to-code-roblox.toml
pages/projects/: drive-to-work.md  drive-to-work.toml  evolve-3d.md  evolve-3d.toml  loop.md  loop.toml  the-archives.md  the-archives.toml  website.md  website.toml  zetabot.md  zetabot.toml
src/: main.rs  routes.rs  util.rs
src/routes/: blog.rs  miscellaneous.rs  mod.rs  pages.rs
src/util/: file_to_response.rs  md_to_html.rs  mod.rs  open_file.rs
