[package]
name = "rust-webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"]}
tokio = { version = "1.44.1", features = ["full"]}
tower = { version = "0.5.2", features = ["util"]}
tower-http = { version = "0.6.2", features = ["fs", "trace"]}

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}